--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@fastify/cors": "^8.2.1",
     "@prisma/client": "^4.13.0",
-    "fastify": "^4.15.0"
+    "dayjs": "^1.11.7",
+    "fastify": "^4.15.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.1.0",
